# DMaster

./: .gitignore  ARCHITECTURE.md  Cargo.toml  book.toml  display_profile.json
.cargo/: config.toml
dmaster_cli/: Cargo.toml
dmaster_cli/src/: main.rs
dmaster_core/: Cargo.toml
dmaster_core/src/: apply.rs  display_info.rs  lib.rs  profile.rs  query.rs
dmaster_core/src/backend/: gnome_wayland.rs  linux.rs  mod.rs  unsupported.rs  windows.rs
dmaster_gui/: Cargo.toml
dmaster_gui/src/: main.rs
dmaster_gui/ui/: app.slint  mapping_dialog.slint  save_dialog.slint
docs/curriculum/: 00_커리큘럼_개요.md  01_프로젝트_구조와_모듈_시스템.md  02_소유권과_타입_시스템.md  03_데이터_모델_설계.md  04_Trait와_Backend_패턴.md  05_Linux_백엔드_심화.md  06_프로필_관리와_직렬화.md  07_Slint_기초.md  08_Slint_실전_수정_가이드.md  09_Windows_백엔드_심화.md  10_CLI_프론트엔드_설계.md  11_buildrs와_Slint_빌드_파이프라인.md  12_Cargo_의존성_관리와_기능플래그.md  SUMMARY.md
src/: apply.rs  display_info.rs  lib.rs  main.rs  profile.rs  query.rs
