[package]
name = "DMaster"
version = "0.1.0"
edition = "2024"
authors = ["Damchan"]
description = "A Rust project for Display"
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "wingdi"] }
