[package]
name = "dmaster_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21,0" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

# Mock API에서 비동기 지연을 시뮬레이션하기 위해 추가 (선택사항이지만 추천)
gloo-timers = { version = "0.3.0", features = ["futures"] }

# 콘솔에 로그를 남기기 위해 추가
log = "0.4"
wasm-logger = "0.2"